# Industrialisation_IA

./: .gitignore  404.html  Preprocess.py  app.py  config.py  full_model_pipeline.pkl  index.html  main.py  mkdocs.yml  model_montant.pkl  model_to_pkl.py  preprocess_montant.py  preprocessing_montant.pkl  pyproject.toml  refactoring_preprocess.py  requirements.txt  sitemap.xml  test_preprocess.py  xgb_regressor_model.pkl
.github/workflows/: ci.yml
Old/: CM_XGBoost_Avance6.ipynb  Factorisation.ipynb  full_model_pipeline.pkl  model_to_pkl.py  preprocess.py  test_preprocess.py  test_preprocess_save.py
app/: configfrequence.py  main.py  preprocessing_frequence.pkl  preprocessing_montant.pkl  preprocessing_pipeline_frequence.py  preprocessing_pipeline_montant.py  preprocessing_refactoring_frequence.py  preprocessing_refactoring_montant.py
docs/: index.md
public/: 404.html  index.html
site/search/: search_index.json
tests/: preprocess.py  preprocessing_refactoring_test_montant.py  test_preprocess.py  test_preprocessing_refactoring_frequence.py  test_preprocessing_refactoring_montant.py
