[project]
name = "industrialisation-ia"
version = "0.1.0"
description = ""
authors = [
    {name = "Sblin7",email = "blinsabine@cy-tech.fr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
